// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonField component is correctly rendering component label 1`] = `
<button
  className="text-truncate btn btn-xs btn-outline-primary"
  type="button"
>
  <span>
    test label
  </span>
</button>
`;

exports[`ButtonField component is correctly rendering string label 1`] = `
<button
  className="text-truncate btn btn-xs btn-outline-primary"
  type="button"
/>
`;
